# prism

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRISM_USER_GUIDE.md  README.md
.claude/: settings.local.json
src/: analyzer.rs  app.rs  cli.rs  config.rs  document_processor.rs  error_handler.rs  git_integration.rs  lib.rs  main.rs  progress.rs  template_engine.rs  test_git.rs  traceability.rs  ui.rs
templates/: dashboard.hbs  enterprise.hbs  standard.hbs
templates/examples/: custom_report.hbs  executive_summary.hbs
tests/: analyzer_tests.rs  config_tests.rs  integration_tests.rs
