[package]
name = "prism"
version = "2.0.0"
edition = "2021"
description = "AI-Powered Requirement Analyzer - Enterprise-ready CLI tool for software requirement validation, improvement, and analysis"
license = "MIT"
authors = ["PRISM Team <team@prismcli.com>"]
repository = "https://github.com/cliworld/prism"
homepage = "https://prismcli.com"
keywords = ["requirements", "analysis", "ai", "software", "enterprise"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.3"
regex = "1.5"
anyhow = "1.0"
config = "0.13"
dirs = "5.0"
# Document processing dependencies
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.24"
# Template engine dependencies
handlebars = "5.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"